<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoogleImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Filters_settings">Add Filters</string>
    <string name="search_btn_text">Search</string>
    <string name="search_query_hint">Enter Search Query</string>
    <string name="search_page_title">Image Search</string>
    <string name="title_activity_display_image">Image Details</string>
    <string name="title_activity_filters">FiltersActivity</string>
    <string name="settings_save_button">Save</string>
    <string name="tvWebsiteHint">Enter website</string>
    <string name="tvWebsiteText">Restrict to</string>
    <string name="image_color_title">Image Color</string>
    <string name="file_type_title">File Type</string>
    <string name="file_size_title">File Size</string>
    <string name="file_image_type_title">Image Type</string>
    <string name="filter_title">Advance Search Filters</string>

</resources>
